plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.avr'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	// providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
    // https://mvnrepository.com/artifact/org.bytedeco/javacv
    // implementation group: 'org.bytedeco', name: 'javacv', version: '1.5.7'
    // implementation group: 'org.bytedeco', name: 'ffmpeg-platform', version: '4.4.1'
    // https://mvnrepository.com/artifact/uk.co.caprica/vlcj
    // implementation group: 'uk.co.caprica', name: 'vlcj', version: '4.4.4'
    implementation 'org.jcodec:jcodec:0.2.3'

}

tasks.named('test') {
	useJUnitPlatform()
}
